deploy/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-frontend-service
spec:
  selector:
    app: f5-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
